self hosting foundation framework

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 		<!-- JavaScript -->
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-		<script src="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.js"></script>
 		<script src="https://use.fontawesome.com/b7732d4d89.js"></script>
+		<script src="js/foundation.min.js"></script>
 		<script src="js/exif.js"></script>
 
 
 		<!-- CSS & Fonts -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.css">
+		<link rel="stylesheet" href="css/foundation.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 		<link href="css/weather-icons.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/weather-icons-wind.min.css" rel="stylesheet" type="text/css" />
